--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@vue/eslint-config-prettier": "^7.0.0",
+    "scss-loader": "^0.0.1",
     "swiper": "^8.1.5",
     "v-calendar": "^3.0.0-alpha.8",
     "vue": "^3.2.13",
@@ -16,6 +17,9 @@
     "vuex": "^4.0.0"
   },
   "devDependencies": {
+    "@types/sass": "^1.43.1",
+    "@types/sass-loader": "^8.0.3",
+    "@types/webpack": "^5.28.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
@@ -30,7 +34,10 @@
     "eslint-plugin-vue": "^8.0.3",
     "prettier": "^2.7.1",
     "prettier-eslint": "^15.0.1",
-    "typescript": "~4.5.5"
+    "sass": "^1.54.8",
+    "sass-loader": "^13.0.2",
+    "typescript": "~4.5.5",
+    "webpack": "^5.74.0"
   },
   "eslintConfig": {
     "root": true,
