--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^7.0.1",
     "prettier": "^2.7.1",
     "prettier-eslint": "^15.0.1",
     "sass": "^1.54.8",
-    "sass-loader": "^13.0.2",
+    "sass-loader": "^10.3.1",
     "typescript": "~4.5.5",
     "webpack": "^5.74.0"
   },
